			   XPCE ChangeLog
			   ==============

VERSION 6.0.0, distributed with SWI-Prolog 5.0.0
================================================

* SECURITY: Use mkstemp for making temporary files.  See file->initialise.

* LICENSE: The license conditions have been changed to allow for building
  non-free applications (LGPL and GPL+Exception)

* ADDED: Bind cursor left/right to ->advance in dialog items.
  `device->advance' has a new `direction' argument.

* MODIFIED: Unix/X11 version look-and-feel aspects of the classes button,
  menu_bar, scroll_bar, text_item, int_item: including `gtk' look and feel.

* FIXED: Minor redraw issues when uncovering windows involving dialog items
  or text `with things sticking out'.

* MODIFIED: `Frame<-geometry' excludes the size if <-can_resize yields @off
  (for improved geometry maintenance by class persistent_frame).

* FIXED: shrinking ver_stretch items in a dialog (shrink could be blocked
  by empty cells in other columns).

* FIXED: Make Windows version completely compatible in frame geometry
  handling, required to make the persistent_frame library function
  correctly.

* ADDED: library(persistent_frame) defining a class with the same name that
  realises a frame remembering its position, size and subwindow layout.  Use
  this class for (part of) the development environment tools.

* FIXED: May issues around frame<->geometry.  At least on the X11 version,
  <->geometry now queries and restores the geometry correctly.

* MODIFIED/FIXED: `frame<-bounding_box' to return the true position of the
  frame rather then just the size, making this method more suitable for
  screen layout arithmetic.  Related and improved documentation of frame
  geometry-management methods.  Fixed PostScript code to deal with the
  changed interface.

* FIXED: If there is a default button in a dialog, give it the keyboard
  focus instead of giving it to another button (Christophe Costa Florencio).
